# sanctus

./: .gitignore  README.md  build-tauri.sh
.github/workflows/: release.yml
backend/: .env  Cargo.toml
backend/migrations/: 20260204232607_initial_schema.sql  20260207000000_add_budgeting.sql  20260208000000_seed_test_data.sql  20260209104500_force_admin_password.sql  20260211120000_promote_admin.sql  20260211160000_add_clusters_families_priest.sql  20260211193000_add_member_family_role.sql  20260212210000_add_photo_logo_columns.sql  20260213150000_add_settings_table.sql  20260213180000_add_permissions_roles.sql
backend/src/: main.rs  sync.rs
backend/src/handlers/: audit.rs  auth.rs  budget.rs  cluster.rs  dashboard.rs  diocese.rs  family.rs  import.rs  member.rs  mod.rs  parish.rs  permission.rs  rbac.rs  report.rs  sacrament.rs  scc.rs  setting.rs  transaction.rs  upload.rs  user.rs
backend/src/models/: audit.rs  budget.rs  cluster.rs  dashboard.rs  diocese.rs  family.rs  member.rs  mod.rs  parish.rs  permission.rs  report.rs  scc.rs  setting.rs  transaction.rs  user.rs
mobile/: .gitignore  README.md  pubspec.yaml
mobile/lib/: main.dart
mobile/lib/models/: enums.dart  member.dart  parish.dart  sacrament.dart  transaction.dart  user.dart  user_role.dart
mobile/lib/screens/: collection_screen.dart  expense_screen.dart  home_screen.dart  login_screen.dart  member_form_screen.dart  member_list_screen.dart  sacrament_screen.dart  sync_screen.dart
web/: package-lock.json  package.json
web/src/: App.tsx
web/src-tauri/: Cargo.toml  tauri.conf.json
(+38 files in other folders)
